fix: dask - api test 500 issues
